# dmpk-rat-dose-v4

./: .dockerignore  .gitignore  DEPLOY_V4_CLOUDRUN.md  Dockerfile  LICENSE  LOCAL_SETUP_NUCLEUS.md  README.md  STREAMLIT_CLOUD_DEPLOY.md  V4_SETUP_AND_GITHUB.md  app.py  app_rat.py  pyproject.toml  requirements-app.txt  requirements.txt  run_app.ps1  run_app.sh  run_local_nucleus.sh  run_rat_app.ps1  run_rat_app.sh
.devcontainer/: devcontainer.json
.streamlit/: config.toml
deploy/: deploy_cloudrun.ps1  deploy_cloudrun.sh
dmpk_predictor/: __init__.py  allometry.py  binding.py  bioavailability.py  cdd_client.py  cdd_config.py  config.py  dose.py  export.py  features.py  hybrid.py  ivive.py  nucleus_client.py  nucleus_config.py  nucleus_ml.py  nucleus_screen.py  pipeline.py  props.py  rat_batch.py  rat_dose.py  rat_export.py  simulate.py  units.py  vd_predict.py
examples/: batch_template.csv  cdd_discover.py  cdd_probe.py  nucleus_probe.py  rat_batch_demo_inputs.csv  rat_batch_template.csv  run_hybrid_example.py  verify_ui_layer.py
pages/: 2_Human_dose_allometry.py
